--- a/DAT1.ipynb
+++ b/DAT1.ipynb
@@ -2,16 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: plotly in c:\\users\\jonat\\anaconda3\\lib\\site-packages (5.3.1)\n",
-      "Requirement already satisfied: six in c:\\users\\jonat\\appdata\\roaming\\python\\python38\\site-packages (from plotly) (1.16.0)\n",
-      "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\jonat\\anaconda3\\lib\\site-packages (from plotly) (8.0.1)\n"
+      "Collecting plotly\n",
+      "  Downloading plotly-5.4.0-py2.py3-none-any.whl (25.3 MB)\n",
+      "\u001b[K     |████████████████████████████████| 25.3 MB 6.9 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting tenacity>=6.2.0\n",
+      "  Downloading tenacity-8.0.1-py3-none-any.whl (24 kB)\n",
+      "Requirement already satisfied: six in /Users/ethanalter/opt/anaconda3/lib/python3.8/site-packages (from plotly) (1.15.0)\n",
+      "Installing collected packages: tenacity, plotly\n",
+      "Successfully installed plotly-5.4.0 tenacity-8.0.1\n"
      ]
     }
    ],
@@ -22,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -190,7 +195,7 @@
        "9  0.17004  6.004  6.5921  311.0     15.2  17.10   18.9"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +350,7 @@
        "max     50.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
