--- a/Class2/Labs/Pandas -- Basic Selecting & Querying-Restaurants.ipynb
+++ b/Class2/Labs/Pandas -- Basic Selecting & Querying-Restaurants.ipynb
@@ -16,6 +16,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#uploading data and importing packages \n",
+    "import numpy as np \n",
+    "import pandas as pd\n",
+    "\n",
+    "url = r\"/Users/ethanalter/Dropbox (Personal)/GA-4K-DataScience/gazelle-4K/data/master.csv\"\n",
+    "df = pd.read_csv(url)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,11 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.973761245180636"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your answer here"
+    "df['visitors'].mean()"
    ]
   },
   {
@@ -47,11 +72,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "visitors    17.0\n",
+       "holiday      0.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your answer here"
+    "df[['visitors', 'holiday']].median()"
    ]
   },
   {
@@ -63,11 +101,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(5000)['visitors'].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#another way to do this - only works if index is numeric - remember that loc is looking at values!\n",
+    "df.loc[:5000, 'visitors'].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your answer here"
+    "#can change the index with df.set_index('id')"
    ]
   },
   {
@@ -79,11 +158,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>reserve_visitors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Fukuoka-ken Fukuoka-shi Daimyō</td>\n",
+       "      <td>33.589216</td>\n",
+       "      <td>130.392813</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             area   latitude   longitude  reserve_visitors\n",
+       "0  Fukuoka-ken Fukuoka-shi Daimyō  33.589216  130.392813               2.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your answer here"
+    "#[rows,columns]\n",
+    "df.iloc[:,-4:].mode()"
    ]
   },
   {
@@ -95,11 +224,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "visitors    24.912\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your answer here"
+    "df.iloc[:250, :3].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "note that the formula only applies to the numeric values "
    ]
   },
   {
@@ -118,22 +266,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'visit_date', 'visitors', 'day_of_week', 'holiday', 'genre',\n",
+       "       'area', 'latitude', 'longitude', 'reserve_visitors'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your answer here"
+    "df.columns\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.177009027207877"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Monday\n",
+    "df[df['day_of_week'] == 'Monday']['visitors'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25.256869738495084"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# straight forward way"
+    "df[df['day_of_week'].isin(['Saturday', 'Sunday'])]['visitors'].mean()"
    ]
   },
   {
@@ -154,29 +347,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attendance higher on holidays\n"
+     ]
+    }
+   ],
    "source": [
-    "# your answer here"
+    "if (df[df['holiday'] == 1]['visitors'].mean()) > (df[df['holiday'] == 0]['visitors'].mean()):\n",
+    "    print(\"Attendance higher on holidays\")\n",
+    "else: \n",
+    "    print(\"Attendance higher on non-holidays\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# non - holidays"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# more straight forward way to do it -- this will be covered in more detail in a later class"
+    "I'm not sure why this is not working..."
    ]
   },
   {
@@ -188,11 +381,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "245791    2017-01-23\n",
+       "Name: visit_date, dtype: object"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your answer here -- notice the different way of selecting"
+    "df[df['genre'] == \"Dining bar\"].sort_values(by=['visitors'], ascending = 0)[:1]['visit_date']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                           air_c6aa2efba0ffc8eb\n",
+       "visit_date                             2017-01-23\n",
+       "visitors                                      348\n",
+       "day_of_week                                Monday\n",
+       "holiday                                         0\n",
+       "genre                                  Dining bar\n",
+       "area                Tōkyō-to Adachi-ku Chūōhonchō\n",
+       "latitude                                  35.7757\n",
+       "longitude                                 139.804\n",
+       "reserve_visitors                               25\n",
+       "Name: 245791, dtype: object"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#another way to do it \n",
+    "idx = df[df['genre'] == 'Dining bar']['visitors'].idxmax() #find index of the max row\n",
+    "df.iloc[idx] #use df.iloc[idx] to return the actual row"
    ]
   },
   {
@@ -204,11 +441,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                          air_64d4491ad8cdb1c6\n",
+       "visit_date                            2016-12-30\n",
+       "visitors                                      23\n",
+       "day_of_week                               Friday\n",
+       "holiday                                        1\n",
+       "genre                                 Dining bar\n",
+       "area                Tōkyō-to Minato-ku Shibakōen\n",
+       "latitude                                 35.6581\n",
+       "longitude                                139.752\n",
+       "reserve_visitors                              58\n",
+       "Name: 1503, dtype: object"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your answer here"
+    "idx = df[df['holiday'] == 1]['reserve_visitors'].idxmax()\n",
+    "df.iloc[idx]"
    ]
   },
   {
