adding class 5 material

--- a/Class3/Class3_PandasDirtyDozen.ipynb
+++ b/Class3/Class3_PandasDirtyDozen.ipynb
@@ -2,18 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
     "import pandas as pd\n",
     "\n",
-    "url = r\"/Users/ethanalter/Dropbox (Personal)/GA-4K-DataScience/gazelle-4K/data/master.csv\"\n",
+    "url = r\"/Users/ethanalter/Dropbox (Personal)/GA-4K-DataScience/gazelle-4K/data_master/master.csv\"\n",
     "df = pd.read_csv(url)\n",
     "\n",
     "#can also use relative file path\n",
     "#the above is the absolute file path "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "143714"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['reserve_visitors'].isna().sum()"
    ]
   },
   {
