adding class 6 materials

--- a/Class5/Labs/Pandas -- Time Shifts & Multi Level Indexing-Restaurants - II.ipynb
+++ b/Class5/Labs/Pandas -- Time Shifts & Multi Level Indexing-Restaurants - II.ipynb
@@ -16,6 +16,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "df = pd.read_csv('../../data_master/master.csv', parse_dates = ['visit_date'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,11 +42,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your answer here"
+    "df['quarter'] = df['visit_date'].dt.quarter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['month'] = df['visit_date'].dt.month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['year'] = df['visit_date'].dt.year"
    ]
   },
   {
@@ -57,11 +86,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your answer here"
+    "df['yesterday'] = df.groupby('id')['visitors'].shift()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['2_days_ago'] = df.groupby('id')['visitors'].shift(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['week_ago'] = df.groupby('id')['visitors'].shift(7)"
    ]
   },
   {
@@ -305,6 +352,92 @@
     "This also allows us to get a clearer picture of general trends in values, even if there are irregular daily spikes.\n",
     "\n",
     "To handle these sorts of issues, pandas has an entire section to calculate window statistics called `rolling`, it works like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0               NaN\n",
+       "1               NaN\n",
+       "2         28.666667\n",
+       "3         27.666667\n",
+       "4         19.000000\n",
+       "            ...    \n",
+       "252103    32.000000\n",
+       "252104    43.666667\n",
+       "252105    59.333333\n",
+       "252106    53.333333\n",
+       "252107    42.000000\n",
+       "Name: visitors, Length: 252108, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['visitors'].rolling(3).mean()\n",
+    "#good, but same issue as applying to the unaggregated rows that we experienced with shift "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                          \n",
+       "air_00a91d42b08b08d9  166836          NaN\n",
+       "                      166837          NaN\n",
+       "                      166838    21.333333\n",
+       "                      166839    18.000000\n",
+       "                      166840    24.666667\n",
+       "                                  ...    \n",
+       "air_fff68b929994bfbd  216672     4.000000\n",
+       "                      216673     2.666667\n",
+       "                      216674     3.000000\n",
+       "                      216675     3.333333\n",
+       "                      216676     3.000000\n",
+       "Name: visitors, Length: 252108, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#grouping to solve above problem \n",
+    "df.groupby('id')['visitors'].rolling(3).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Saving this as a column requires us to use .values**\n",
+    "\n",
+    "Why? Because pandas looks at the index for the added column and tries to match it with the existing df. Without .values, this will fail because the indexes won't match because of how multi-level indices are created by the rolling method in pandas\n",
+    "\n",
+    ".values just returns the raw column values as a np.array "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#saving this as a new column \n",
+    "df['3dayrolling'] = df.groupby('id')['visitors'].rolling(3).mean().shift().values"
    ]
   },
   {
