--- a/Class12/Partial Dependence Lab.ipynb
+++ b/Class12/Partial Dependence Lab.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9471b2c8",
    "metadata": {},
    "source": [
     "### Partial Dependence Lab\n",
@@ -17,7 +16,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b654989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +25,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -41,7 +39,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
