--- a/Class12/Partial Dependence Plotting -- Restaurants Dataset.ipynb
+++ b/Class12/Partial Dependence Plotting -- Restaurants Dataset.ipynb
@@ -17,17 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load in the dataset -- change filepath as appropriate\n",
-    "df = pd.read_csv(r\"../../Data/Unit2/restaurant_data/master.csv\")"
+    "df = pd.read_csv('/Users/ethanalter/Dropbox (Personal)/GA-4K-DataScience/gazelle-4K/data_master/master.csv', parse_dates = ['visit_date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +46,257 @@
     "# and do our splits\n",
     "X_train, y_train = train.drop(['visit_date', 'visitors'], axis=1), train['visitors']\n",
     "X_test, y_test   = test.drop(['visit_date', 'visitors'], axis=1), test['visitors']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>visit_date</th>\n",
+       "      <th>visitors</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>area</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>reserve_visitors</th>\n",
+       "      <th>city</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>166836</th>\n",
+       "      <td>air_00a91d42b08b08d9</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Italian/French</td>\n",
+       "      <td>Tōkyō-to Chiyoda-ku Kudanminami</td>\n",
+       "      <td>35.694003</td>\n",
+       "      <td>139.753595</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Tōkyō</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166837</th>\n",
+       "      <td>air_00a91d42b08b08d9</td>\n",
+       "      <td>2016-07-02</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Italian/French</td>\n",
+       "      <td>Tōkyō-to Chiyoda-ku Kudanminami</td>\n",
+       "      <td>35.694003</td>\n",
+       "      <td>139.753595</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Tōkyō</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166838</th>\n",
+       "      <td>air_00a91d42b08b08d9</td>\n",
+       "      <td>2016-07-04</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Italian/French</td>\n",
+       "      <td>Tōkyō-to Chiyoda-ku Kudanminami</td>\n",
+       "      <td>35.694003</td>\n",
+       "      <td>139.753595</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Tōkyō</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166839</th>\n",
+       "      <td>air_00a91d42b08b08d9</td>\n",
+       "      <td>2016-07-05</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Italian/French</td>\n",
+       "      <td>Tōkyō-to Chiyoda-ku Kudanminami</td>\n",
+       "      <td>35.694003</td>\n",
+       "      <td>139.753595</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Tōkyō</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166840</th>\n",
+       "      <td>air_00a91d42b08b08d9</td>\n",
+       "      <td>2016-07-06</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Italian/French</td>\n",
+       "      <td>Tōkyō-to Chiyoda-ku Kudanminami</td>\n",
+       "      <td>35.694003</td>\n",
+       "      <td>139.753595</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Tōkyō</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216643</th>\n",
+       "      <td>air_fff68b929994bfbd</td>\n",
+       "      <td>2017-04-18</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Bar/Cocktail</td>\n",
+       "      <td>Tōkyō-to Nakano-ku Nakano</td>\n",
+       "      <td>35.708146</td>\n",
+       "      <td>139.666288</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Tōkyō</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216644</th>\n",
+       "      <td>air_fff68b929994bfbd</td>\n",
+       "      <td>2017-04-19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Bar/Cocktail</td>\n",
+       "      <td>Tōkyō-to Nakano-ku Nakano</td>\n",
+       "      <td>35.708146</td>\n",
+       "      <td>139.666288</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Tōkyō</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216645</th>\n",
+       "      <td>air_fff68b929994bfbd</td>\n",
+       "      <td>2017-04-20</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Bar/Cocktail</td>\n",
+       "      <td>Tōkyō-to Nakano-ku Nakano</td>\n",
+       "      <td>35.708146</td>\n",
+       "      <td>139.666288</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Tōkyō</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216646</th>\n",
+       "      <td>air_fff68b929994bfbd</td>\n",
+       "      <td>2017-04-21</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Bar/Cocktail</td>\n",
+       "      <td>Tōkyō-to Nakano-ku Nakano</td>\n",
+       "      <td>35.708146</td>\n",
+       "      <td>139.666288</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Tōkyō</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216647</th>\n",
+       "      <td>air_fff68b929994bfbd</td>\n",
+       "      <td>2017-04-22</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Bar/Cocktail</td>\n",
+       "      <td>Tōkyō-to Nakano-ku Nakano</td>\n",
+       "      <td>35.708146</td>\n",
+       "      <td>139.666288</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>Tōkyō</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>252108 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          id visit_date  visitors day_of_week  holiday  \\\n",
+       "166836  air_00a91d42b08b08d9 2016-07-01        35      Friday        0   \n",
+       "166837  air_00a91d42b08b08d9 2016-07-02         9    Saturday        0   \n",
+       "166838  air_00a91d42b08b08d9 2016-07-04        20      Monday        0   \n",
+       "166839  air_00a91d42b08b08d9 2016-07-05        25     Tuesday        0   \n",
+       "166840  air_00a91d42b08b08d9 2016-07-06        29   Wednesday        0   \n",
+       "...                      ...        ...       ...         ...      ...   \n",
+       "216643  air_fff68b929994bfbd 2017-04-18         6     Tuesday        0   \n",
+       "216644  air_fff68b929994bfbd 2017-04-19         2   Wednesday        0   \n",
+       "216645  air_fff68b929994bfbd 2017-04-20         2    Thursday        0   \n",
+       "216646  air_fff68b929994bfbd 2017-04-21         4      Friday        0   \n",
+       "216647  air_fff68b929994bfbd 2017-04-22         5    Saturday        0   \n",
+       "\n",
+       "                 genre                             area   latitude  \\\n",
+       "166836  Italian/French  Tōkyō-to Chiyoda-ku Kudanminami  35.694003   \n",
+       "166837  Italian/French  Tōkyō-to Chiyoda-ku Kudanminami  35.694003   \n",
+       "166838  Italian/French  Tōkyō-to Chiyoda-ku Kudanminami  35.694003   \n",
+       "166839  Italian/French  Tōkyō-to Chiyoda-ku Kudanminami  35.694003   \n",
+       "166840  Italian/French  Tōkyō-to Chiyoda-ku Kudanminami  35.694003   \n",
+       "...                ...                              ...        ...   \n",
+       "216643    Bar/Cocktail        Tōkyō-to Nakano-ku Nakano  35.708146   \n",
+       "216644    Bar/Cocktail        Tōkyō-to Nakano-ku Nakano  35.708146   \n",
+       "216645    Bar/Cocktail        Tōkyō-to Nakano-ku Nakano  35.708146   \n",
+       "216646    Bar/Cocktail        Tōkyō-to Nakano-ku Nakano  35.708146   \n",
+       "216647    Bar/Cocktail        Tōkyō-to Nakano-ku Nakano  35.708146   \n",
+       "\n",
+       "         longitude  reserve_visitors   city  \n",
+       "166836  139.753595               0.0  Tōkyō  \n",
+       "166837  139.753595               4.0  Tōkyō  \n",
+       "166838  139.753595               0.0  Tōkyō  \n",
+       "166839  139.753595               0.0  Tōkyō  \n",
+       "166840  139.753595               0.0  Tōkyō  \n",
+       "...            ...               ...    ...  \n",
+       "216643  139.666288               0.0  Tōkyō  \n",
+       "216644  139.666288               0.0  Tōkyō  \n",
+       "216645  139.666288               1.0  Tōkyō  \n",
+       "216646  139.666288               6.0  Tōkyō  \n",
+       "216647  139.666288              37.0  Tōkyō  \n",
+       "\n",
+       "[252108 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -243,7 +494,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -257,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
