adding final files

--- a/Class15/KickstarterWalkthrough with Classification.ipynb
+++ b/Class15/KickstarterWalkthrough with Classification.ipynb
@@ -1347,7 +1347,7 @@
     "\n",
     "# go ahead and transform X_train to prep it for PDPBox\n",
     "# the model is already fitted so we don't have to worry about doing that\n",
-    "X_train = pipe[0].transform(X_train)\n",
+    "[X_train = pipe[0].transform(X_train)]\n",
     "X_train = pipe[1].transform(X_train)"
    ]
   },
@@ -1661,7 +1661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
